blog/deployment/blog.yaml
apiVersion: v1
kind: Service
metadata:
  name: blog
  labels:
    app: blog
spec:
  ports:
  - port: 8080
    targetPort: grpc
    protocol: TCP
    name: grpc
  selector:
    app: blog
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blog-v1
  labels:
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: blog
      version: v1
  template:
    metadata:
      labels:
        app: blog
        version: v1
    spec:
      containers:
      - name: blog
        image: blogsvc
        resources:
          requests:
            cpu: "100m"
        imagePullPolicy: IfNotPresent
        ports:
          - name: grpc
            containerPort: 8080
            protocol: TCP
