blog/deployment/blog-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: blog-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: blog
spec:
  hosts:
  - "*"
  gateways:
  - blog-gateway
  http:
  - match:
    - uri:
        prefix: "/"
    route:
    - destination:
        host: blog
        port:
          number: 8080
